--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/projectdb
+spring.datasource.username=root
+spring.datasource.password=Bastard@81
+
+spring.jpa.show-sql=true
 server.port=8090
 logging.file.path=logs
 
