--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.datasource.password=Bastard@81
 spring.jpa.show-sql=true
 server.port=8090
 logging.file.path=logs
+server.servlet.context-path=/
 
