--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,13 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		
+		<dependency>
+		  <groupId>junit</groupId>     <!-- NOT org.junit here -->
+		  <artifactId>junit-dep</artifactId>
+		  <version>4.8.2</version>
+		  <scope>test</scope>
+		</dependency>
+		
 		
 		<dependency>
 		<groupId>mysql</groupId>
@@ -36,10 +43,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		
-		
-		
-		
+				
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
